# Phone_book_app

./: CMakeLists.txt  README.md  app.c  app.h  c_project.c  input.txt  read_file.c  window_main.glade
b/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  c_project  cmake_install.cmake  read_file  rules.ninja  test-gtk
b/cgraph/: cmake_install.cmake
b/cgraph/ctc/: cmake_install.cmake
b/cgraph/examples/: cgraph_ivec_t_demo  cgraph_rvec_t_demo  cmake_install.cmake  cvector_demo  ivec_as_param  ivec_as_param2
b/cgraph/examples/application/: cmake_install.cmake  task1c  task1cc
b/cgraph/examples/cgen/: cmake_install.cmake  vector_of_ivec
b/cgraph/examples/ctc/: cmake_install.cmake  queue
b/cgraph/examples/ctc/my/: cmake_install.cmake  hsi_demo  pq_demo
b/libfdr/: cmake_install.cmake
